# VelociTrade

./: .gitignore  CMakeLists.txt  README.md  config.yaml
include/book/: order_book_l2.hpp
include/core/: framing.hpp  log.hpp  time.hpp  util.hpp
include/net/: udp_rx.hpp
include/proto/: messages.hpp
src/client/: uclient.cpp
src/sim/: ex_sim.cpp
tools/: plot_latency.py
