cmake_minimum_required(VERSION 3.16)
project(uTradeProMini LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()
add_compile_options(-O3 -fno-omit-frame-pointer)
include_directories(${CMAKE_SOURCE_DIR}/include)
add_executable(ex_sim   src/sim/ex_sim.cpp)
add_executable(uclient  src/client/uclient.cpp)